2011-12-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Add test for 5.8 ‘rlog -zLT’ regression.

	Normally for a regression test, we add it before the fix,
	marked xfail, then in a separate commit apply the fix and
	unmark it xfail.  In this case, however, failure only happens
	on certain configurations (see ../src/ChangeLog 2011-12-26),
	and we can't be bothered to add "conditional xfail" support.
	Instead, we apply the fix and add the test separately, only.

	* t320: New file.
	* Makefile.am (TESTS): Add t320.

2011-10-31  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v int] Mine ‘subs’ and ‘executables’ from ../src/Makefile.

	* t150 (subs, independent): Delete vars;
	replace with commands to extract Makefile vars
	‘subs’ and ‘executables’ from ../src/Makefile.
	(norecurse): Use ‘$executables’.

2011-10-30  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Add configure option ‘--disable-standalone-compat’.

	* Makefile.am (TESTS_ENVIRONMENT): Pass in ‘DEFSHELLFUNCS’.
	* common <subroutines>: Depending on the value of
	‘DEFSHELLFUNCS’, source a shell-script fragment
	from ../src to define some command aliases.

2011-10-30  Thien-Thi Nguyen  <ttn@gnuvola.org>

	New program: grcs

	* t150 (dispatch, subs, independent, norecurse): New vars.
	(programs): Use ‘norecurse’, ‘subs’.
	(avoid): New var.
	<main>: Also check ‘--help’ and ‘--verbose’ for ‘subs’.

2011-10-28  Paul Eggert  <eggert@CS.UCLA.EDU>

	[v] Fix bug: Refine criteria for avoiding read-only checks.

	Previously, tests using ‘dont_check_readonly’
	failed if the "make check" user was root.
	Reported by Ian Delaney, Aaron W. Swenson.

	* common-i (dont_check_readonly): Don't compute based on
	a ‘uname -s’ output; instead, check to see if the user can
	write a purportedly read-only file, and inhibit based on that.

2011-10-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Revert: "Use which(1) instead of ‘type’".

	Apparently, ‘type’ is standardized by POSIX.