@@ -41,3 +41,4 @@ For RCS 5.9, thanks go to:
   Honza Horak
   Ian Delaney
   Paul Eggert
+  (and others who prefer anonymity)
