@@ -31,7 +31,7 @@ TESTS_ENVIRONMENT = 				\
   DEFSHELLFUNCS=$(DEFSHELLFUNCS)		\
   PATHPREFIX="$(PATHPREFIX)" sh
 
-XFAIL_TESTS =
+XFAIL_TESTS = t810
 
 TESTS = \
  t010 \
@@ -71,6 +71,7 @@ TESTS = \
  t800 \
  t801 \
  t802 \
+ t810 \
  t900 \
  t999
 
