@@ -1,0 +1,34 @@
+# t810 --- ci -l -d -T FILE
+#
+# Copyright (C) 2012 Thien-Thi Nguyen
+#
+# This program is free software: you can redistribute it and/or
+# modify it under the terms of the GNU General Public License as
+# published by the Free Software Foundation, either version 3 of
+# the License, or (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty
+# of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+# See the GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+. $srcdir/common
+split_std_out_err no
+. $srcdir/common-d
+
+##
+# Check that ‘ci -l -d -T FILE’ does not set
+# the mtime of FILE,v to the epoch.
+# This test derives from a 5.8 regression (and bugfix).
+##
+
+must 'echo new line >> $w'
+must 'ci -mm -l -d -T $w'
+test $w -nt $v && problem "$w newer than $v"
+
+exit 0
+
+# t810 ends here
